# YT-Spammer-Purge

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LISCENCE  Linux-Installation-Instructions.md  Makefile  OLD_README.md  Pipfile  README.md  SECURITY.md  Spam_Log_2021-11-04_21-09-57.txt  Spam_Log_2021-11-05_15-34-39.txt  Suck me.html  TempYouTubeSpammerPurge.py  YTSpammerPurge.py  YTSpammerPurge.sh  YouTubeSpammerPurge.py  action.yml  ai_config.ini  community_downloader.py  default_config.ini  do_type_checking.py  docker-compose.override.yml  docker-compose.yml  duties.py  example_test.txt  export_requirements.py  gui.py  install.sh  install_full.sh  installmacos.sh  mkdocs.yml  oYouTubeSpammerPurge.py  pyproject.toml  (+2 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  bug_report.yaml  config.yml  spam_detection  spam_detection.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  pull_request_template.yml
.github/workflows/: black-formatting.yml  black-pull.yml  black-push.yml  black.yml  ci.yml  codeql-analysis.yml  docker-build.yml  winget.yml
Scripts/: ai.py  auth.py  benchmark_distance.py  colors.py  community_downloader.py  files.py  filter_variables.py  generate_json_schema.nu  generate_json_schema.sh  generate_key_arguments.sh  get_json_property_representation.awk  get_raw_property_representation.awk  gui.py  list_option_values.sh  logging.py  operations.py  operations.pyi  prepare_modes.py  shared_imports.py  user_tools.py  utils.py  validation.py  validation.pyi
Scripts/confusablesCustom/: Custom Confusable String Maker.py  Note About This Module & License.txt  Note About This Module.txt  __init__.py  config.py  parse.py
Scripts/confusablesCustom/assets/: confusable_mapping.json  custom_confusables.txt
WebSite/: README.md  package-lock.json  package.json
WebSite/public/: index.html
WebSite/src/: App.css  App.js  index.css  index.js
WebSite/src/components/: index.js
WebSite/src/components/article/: Article.jsx  article.css
WebSite/src/components/cta/: CTA.jsx  cta.css
WebSite/src/components/feature/: Feature.jsx  feature.css
WebSite/src/components/navbar/: Navbar.jsx  navbar.css
WebSite/src/containers/: index.js
WebSite/src/containers/ProTip/: ProTip.css  ProTip.jsx
WebSite/src/containers/blog/: Blog.jsx  blog.css  imports.js
WebSite/src/containers/features/: Features.jsx  features.css
WebSite/src/containers/footer/: Footer.jsx  footer.css
assets/: SpamAccountsList.txt  SpamDomainsList.txt  SpamThreadsList.txt  SpamVersionInfo.json  default_config.ini  install.sh  install_full.sh  rootZoneDomainList.txt  schema.json
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini
docker/: Dockerfile  docker-compose.yml
docs/: changelog.md  code_of_conduct.md  credits.md  gen_ref_nav.py  license.md  macros.py
docs/css/: mkdocstrings.css
docs/reference/: cli.md
scripts/: multirun.sh  setup.sh
src/: YTSpammerPurge.py
src/Scripts/: auth.py  benchmark_distance.py  community_downloader.py  files.py  filter_variables.py  gui.py  logging.py  operations.py  prepare_modes.py  shared_imports.py  types.py  user_tools.py  utils.py  validation.py
src/Scripts/confusablesCustom/: Custom Confusable String Maker.py  __init__.py  config.py  parse.py  utils.py
src/yt_spam_purge/: __init__.py  __main__.py  auth.py  cli.py  community_downloader.py  files.py  gui.py  logging.py  operations.py  prepare_modes.py  utils.py  validation.py
src/yt_spam_purge/assets/: SpamThreadsList.txt  SpamVersionInfo.json  default_config.ini
tests/: __init__.py  conftest.py  test_YTSpammerPurge.py  test_auth.py  test_cli.py  test_community_downloader.py  test_files.py  test_main.py  test_operations.py  test_validation.py
typings/google_auth_oauthlib/: flow.pyi
typings/googleapiclient/: discovery.pyi  errors.pyi  model.pyi
typings/pwinput/: __init__.pyi
(+4 files in other folders)
